--- a/src/app/components/sort-lab/sort-lab.component.html
+++ b/src/app/components/sort-lab/sort-lab.component.html
@@ -130,7 +130,7 @@
           </button>
 
           <button mat-raised-button color="warn" (click)="reset()">Reset</button>
-          <button mat-raised-button *ngIf="mode === 'single'" (click)="backStep()" [disabled]="!canGoBack()">Back Step</button>
+          <button mat-raised-button *ngIf="mode === 'single'" (click)="backStep()" >Back Step</button>
           <button mat-raised-button *ngIf="mode === 'single'" (click)="nextStep()">Next Step</button>
 
           <div class="speed-control">
